--- a/index.html
+++ b/index.html
@@ -191,15 +191,12 @@
   user-select: none;
 }
 
-/* ==== List view: smaller image, no white gaps ==== */
+/* ==== List view: full-width image, no white gaps ==== */
 .cards-1 .thumb-frame {
-  /* a bit narrower than the card, centered */
-  width: clamp(640px, 88%, 960px);
-  margin: 10px auto 0;
-
-  /* keep a familiar wide frame but not huge */
+  width: 100%;
+  margin: 0;
   aspect-ratio: 16 / 9;        /* stable layout, no CLS */
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   overflow: hidden;            /* ensure clean edges */
 }
 
